# heroes3tools

./: .browserslistrc  .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  .stylelintrc  CHANGELOG.md  FUNDING.yml  LICENSE.md  README.md  commitlint.config.cjs  commitlint.js  eslint.config.mjs  index.html  jest.config.js  localazy.json  localazy.keys.json  package-lock.json  package.json  peeky.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vue.config.js
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
public/: error-page.html  index.html  robots.txt  sitemap.txt
src/: App.vue  constants.ts  database.ts  env.d.ts  i18n.js  i18n.ts  main.js  main.ts  registerServiceWorker.js  router.ts  shims-vue.d.ts  store.ts  sw.ts  utilities.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: CalculatorTabs.vue  ChangeLocale.vue  CustomSelect.vue  DamageCalculator.vue  DamageCalculatorTab.vue  ExternalLink.vue  HowToUse.vue  MagicCalculator.vue  ObjectPortrait.vue  PageFooter.vue  PickCreatureButton.vue  Portrait.vue  SelectHero.vue  SelectTerrain.vue  SelectUnitModal.vue  SpellCard.vue  changeLocale.vue  globals.js  pageFooter.vue
src/css/: colors.scss  grid.scss  main.scss
src/directives/: clickOutside.ts
src/locales/: en.json  ru.json
src/models/: Battle.ts  Calculator.ts  Class.ts  Creature.ts  CreaturesSpecials.ts  Hero.ts  Level.ts  Skill.ts  Spell.ts  Terrain.ts  Town.ts  enums.ts
src/modules/: battle.ts  (+6 more)
(+153 files in other folders)
